--- a/styles/game-itself.css
+++ b/styles/game-itself.css
@@ -4,7 +4,7 @@
     width: 500px;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 15px;
 }
 
 /* GAME ITSELF TOP */
@@ -54,4 +54,28 @@
 
 .game-itself-top-reset-button:active {
     background-color: rgb(35, 35, 35);
+}
+
+/* 
+
+    GAME ITSELF GRID
+    
+*/
+    
+.game-itself-grid {
+    height: 500px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 20px;
+}
+
+/* GAME ITSELF GRID ITSELF */
+    
+.game-itself-grid-itself {
+    background-color: rgb(35, 35, 35);
+    border-radius: 0.5rem;
+    border: 1px solid rgba(255, 255, 255, 0.05);
+    box-shadow: 0 5px 0 rgba(0, 0, 0, 0.5);
+    cursor: pointer;
 }
