--- a/styles/game-itself.css
+++ b/styles/game-itself.css
@@ -77,5 +77,17 @@
     border-radius: 0.5rem;
     border: 1px solid rgba(255, 255, 255, 0.05);
     box-shadow: 0 5px 0 rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 5rem;
+    font-weight: 900;
     cursor: pointer;
+    transition: background-color 200ms;
+}
+
+.game-itself-grid-itself:hover {
+    background-color: rgb(42, 42, 42);
+}
+
+.game-itself-grid-itself:active {
+    background-color: rgb(40,40,40);
 }
