--- a/styles/game-itself.css
+++ b/styles/game-itself.css
@@ -70,6 +70,10 @@
     gap: 20px;
 }
 
+.game-itself-grid-inactive {
+    pointer-events: none;
+}
+
 /* GAME ITSELF GRID ITSELF */
     
 .game-itself-grid-itself {
@@ -82,6 +86,10 @@
     font-weight: 900;
     cursor: pointer;
     transition: background-color 200ms;
+}
+
+.game-itself-grid-itself-clicked {
+    pointer-events: none;
 }
 
 .game-itself-grid-itself:hover {
