--- a/styles/game-itself.css
+++ b/styles/game-itself.css
@@ -88,7 +88,7 @@
     transition: background-color 200ms;
 }
 
-.game-itself-grid-itself-clicked {
+.game-itself-grid-itself:disabled {
     pointer-events: none;
 }
 
